--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -24,6 +24,11 @@
   "KubernetesService": {
     "kubernetesVersion": "1.11.5"
   },
+  "APIManagement": {
+    "AllowedIdentityProvider": [
+      "Aad"
+    ]
+  },
   "VirtualMachine": {
     "Windows": {
       "SupportedSkuList": [],
