ASC tier Control

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -318,7 +318,8 @@
     }
   },
   "SubscriptionCore": {
-    "EnableV1AlertFailure": false
+    "EnableV1AlertFailure": false,
+    "ASCTier": "Standard"
   },
   "HDInsight": {
     "MinSupportedClusterVersion": "3.6.0"
