--- a/src/AzSK.AAD/Framework/Configurations/SVT/AAD/AAD.Application.json
+++ b/src/AzSK.AAD/Framework/Configurations/SVT/AAD/AAD.Application.json
@@ -23,7 +23,7 @@
     },
     {
       "ControlID": "AAD_Application_Remove_Test_Demo_Apps",
-      "Description": "Old test/demo apps should be removed from the tenant.",
+      "Description": "Old test/demo apps should be removed from the tenant",
       "Id": "App120",
       "ControlSeverity": "High",
       "Automated": "Yes",
@@ -41,7 +41,7 @@
     },
     {
       "ControlID": "AAD_Application_DP_Return_URLs_HTTPS",
-      "Description": "All return URLs configured for an application must be HTTPS endpoints.",
+      "Description": "All return URLs configured for an application must be HTTPS endpoints",
       "Id": "App130",
       "ControlSeverity": "High",
       "Automated": "Yes",
@@ -59,7 +59,7 @@
     },
     {
       "ControlID": "AAD_Application_Check_Orphan_App",
-      "Description": "Do not permit orphaned apps (i.e., apps with no owners) in the tenant.",
+      "Description": "Do not permit orphaned apps (i.e., apps with no owners) in the tenant",
       "Id": "App140",
       "ControlSeverity": "Medium",
       "Automated": "Yes",
@@ -77,7 +77,7 @@
     },
     {
       "ControlID": "AAD_Application_Check_FTE_Owner",
-      "Description": "At least one of the owners of an app must be an FTE.",
+      "Description": "At least one of the owners of an app must be an FTE",
       "Id": "App150",
       "ControlSeverity": "Medium",
       "Automated": "Yes",
