updated as per comments

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -6,7 +6,8 @@
     "SecretRotationDuration_Days": 180,
     "KeyType": "RSA-HSM",
     "ADAppCredentialTypeCrt": "AsymmetricX509Cert",
-    "ADAppCredentialTypePwd": "Password"
+    "ADAppCredentialTypePwd": "Password",
+    "MaxRecommendedVersions": 3
   },
   "SqlServer": {
     "AuditRetentionPeriod_Min": 365,
@@ -366,8 +367,5 @@
     "Medium": "Medium",
     "Low": "Low"
   },
-  "MandatoryTags":[
-   
-  ]
-
+  "MandatoryTags":[]
 }
