whitelisting RGs in tagging compliance

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -367,7 +367,7 @@
     "Low": "Low"
   },
   "MandatoryTags":[
-   
-  ]
-
+    
+  ],
+  "WhitelistedResourceGroups": ["ERNetwork-[0-9]*", "ERvNet*", "ERNetwork*"]
 }
