--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -260,7 +260,7 @@
     "Minimum_Instance_Count": 2,
     "AADAuthAPIVersion": "2016-08-01",
     "LoadCertAppSettings": "WEBSITE_LOAD_CERTIFICATES",
-    "NonAADAuthProviders": [
+    "NonAADAuthProperties": [
       "googleClientId",
       "facebookAppId",
       "twitterConsumerKey",
