--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -86,7 +86,7 @@
         "Name": "ConfigurationForLinux",
         "RequiredVersion": "1.9.0",
         "AssignmentName" : "SMSClientStatus",
-        "CheckPolicyAssignment":true
+        "CheckPolicyAssignment": false
       }
     },
     "Windows_OS_Baseline_Ids": [],
