--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -56,7 +56,8 @@
       "GuestExtension": {
         "Name": "ConfigurationForWindows",
         "RequiredVersion": "1.11.0.0",
-        "AssignmentName" : "SMSClientStatus" 
+        "AssignmentName" : "SMSClientStatus",
+        "CheckPolicyAssignment":true
       }
     },
     "Linux": {
@@ -84,7 +85,8 @@
       "GuestExtension": {
         "Name": "ConfigurationForLinux",
         "RequiredVersion": "1.9.0",
-        "AssignmentName" : "SMSClientStatus" 
+        "AssignmentName" : "SMSClientStatus",
+        "CheckPolicyAssignment": false
       }
     },
     "Windows_OS_Baseline_Ids": [],
@@ -259,7 +261,13 @@
     "LatestDotNetFrameworkVersionNumber": "v4.0",
     "Minimum_Instance_Count": 2,
     "AADAuthAPIVersion": "2016-08-01",
-    "LoadCertAppSettings": "WEBSITE_LOAD_CERTIFICATES"
+    "LoadCertAppSettings": "WEBSITE_LOAD_CERTIFICATES",
+    "NonAADAuthProperties": [
+      "googleClientId",
+      "facebookAppId",
+      "twitterConsumerKey",
+      "microsoftAccountClientId"
+    ]
   },
   "StorageDiagnosticsSkuMapping": [
     "StandardGRS",
@@ -370,6 +378,7 @@
     "Low": "Low"
   },
   "MandatoryTags":[
-  
-  ]
+
+  ],
+  "WhitelistedResourceGroups": []
 }
