Added new controls in VM and skipped for databricks locked VM

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -269,6 +269,10 @@
       "microsoftAccountClientId"
     ]
   },
+  "DataBricksFilters":{
+   "TagName": "Vendor",
+    "TagValue": "Databricks"
+  },
   "StorageDiagnosticsSkuMapping": [
     "StandardGRS",
     "StandardLRS",
