Changes for Azure_Subscription_Audit_Resolve_Azure_Security_Center_Alerts and addition of IsPreviewBaseline to complianceState csv report

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -106,6 +106,8 @@
   "NoOfApprovedAdmins": 5,
   "NoOfClassicAdminsLimit": 2,
   "CriticalPIMRoles": [ "Owner", "Contributor" ],
+  "ASCAlertsThresholdInDays": 30,
+  "ASCAlertsSeverityLevels":["High"],
   "WhitelistedMgmtCerts": {
     "Thumbprints": [],
     "ApprovedValidityRangeInDays": 732
