Code changes for VM control

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -57,7 +57,7 @@
         "Name": "ConfigurationForWindows",
         "RequiredVersion": "1.11.0.0",
         "AssignmentName" : "SMSClientStatus",
-        "CheckPolicyAssignment":true
+        "CheckPolicyAssignment":false
       }
     },
     "Linux": {
