bug fixes and IsPreviewBaselineColumn in csv

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -110,7 +110,9 @@
   },
   "NoOfApprovedAdmins": 5,
   "NoOfClassicAdminsLimit": 2,
-  "CriticalPIMRoles": [ "Owner", "Contributor" ],
+  "CriticalPIMRoles": [ "Owner", "Contributor" ],  
+  "ASCAlertsSeverityLevels": [ "High" ],
+  "ASCAlertsThresholdInDays": 30,
   "WhitelistedMgmtCerts": {
     "Thumbprints": [],
     "ApprovedValidityRangeInDays": 732
