Added a new control to check permanent access at rg level

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -110,7 +110,10 @@
   },
   "NoOfApprovedAdmins": 5,
   "NoOfClassicAdminsLimit": 2,
-  "CriticalPIMRoles": [ "Owner", "Contributor" ],  
+  "CriticalPIMRoles": { 
+    "Subscription" : [ "Owner", "Contributor", "User Access Administrator" ],
+    "ResourceGroup" : [ "Owner", "User Access Administrator" ]
+  },
   "ASCAlertsSeverityLevels": [ "High" ],
   "ASCAlertsThresholdInDays": 30,
   "WhitelistedMgmtCerts": {
